# SyringePumpController

./: .gitignore  CLAUDE.md  CODE_REVIEW1.md  DESIGN.md  EUSB-30.txt  LearnedPatterns.md  README.md  SY01BE.txt  ToDo.md  main.py  pyproject.toml  server_run.sh  sy01b-ascii.txt
.claude/: settings.json
.github/workflows/: ci.yml
claude_test/: README.md  plunger_cycle.py  prime_line.py  valve_toggle.py
firmware/: DeviceChange.ps1
firmware/main/: CMakeLists.txt  idf_component.yml  main.c  montserrat_14_ext.c  pump_client.c  pump_client.h  pump_task.h  state.c  state.h  ui.c
server/: app.py  routes.py  schemas.py
src/sy01b/: __init__.py  _logging.py  config.py  diagnostics.py  errors.py  protocol.py  pump.py  syringe_pump_controller.py  transport.py
src/sy01b/cli/: diagnose.py
tests/: conftest.py  test_cli.py  test_config.py  test_diagnostics_failures.py  test_errors.py  test_identity.py  test_plunger_motion_absent.py  test_protocol.py  test_pump_fake.py
